syntax = "proto3";
package malware.scan;

option java_package = "com.symphony.malware.scan";
option java_generic_services = true;
option java_multiple_files = true;
option java_outer_classname = "MalwareScanProto";

import "attachment_meta.proto";

message MalwareScanRequest {
    enum EncryptionType {
         UNKNOWN = 0;
         WRAPPED_CONTENT_KEY = 1;
         WRAPPED_FILE_KEY = 2;
    }
    AttachmentMeta attachment_meta = 1;
    EncryptionType encryption_type = 2;
    string wrapped_content_key = 3;
    string wrapped_file_key = 4;
    string trace_id = 5;
}

message MalwareScanResponse {
    Status status = 1;
    string error = 2;
    ErrorCode error_code = 3;
    string trace_id = 4;
}

enum Status {
    UNKNOWN = 0;
    OK = 1;
    FAILED = 2;
}

enum ErrorCode {

    /* Indicates that there is no error i.e. success response. */
    NONE = 0;

    /* Some Unknown issue, reason cannot be determined. */
    UNKNOWN_ISSUE = 101;

    /* Software issue - normally indicates implementation issues in code */
    GENERAL_SOFTWARE_ISSUE = 102;

    /* Unwrapping of the key failed */
    FAILED_TO_UNWRAP_KEY = 103;

    /* Failed to decrypt the attachment */
    FAILED_DECRYPTING_ATTACHMENT = 104;

    /* Failed to download the attachment */
    FAILED_GETTING_ATTACHMENT = 105;

    /* Failed to submit the file to the malware scanner */
    FAILED_SUBMITTING_TO_MALWARE_SCANNER = 106;
}

service MalwareScanService {
    rpc submitForScanning (MalwareScanRequest) returns (MalwareScanResponse);
}
